--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,32 @@
-theme: jekyll-theme-hacker
+title: CartoSquare
+description: "let God be found true, but every man a liar."
+author:
+  name: "ThatDoge"
+  email: "mothsmap@gmail.com"
+  url: "https://cartosquare.com"
+
+baseurl: /
+
+source: .
+destination: ./_site
+permalink: /:title
+paginate: 3
+paginate_path: /page/:num/
+
+defaults:
+  -
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
+
+future: true
+plugins:
+  - jekyll-seo-tag
+  - jekyll-paginate
+  - jekyll-sitemap
+
+# Custom variables
+owner : "ThatDoge"
+year : "2021"
